Fixes the addRandomFact funtion to edit the css of the div to alternate between being visible and hidden

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -6,10 +6,19 @@
 
 #fact-container {
   margin-top: 20px;
+  margin-bottom: 10px;
 }
 
-#img {
-    height: 250px;
-    width: 350px;
-    margin: 5px;
+.mediumImg {
+  height: 250px;
+  width: 350px;
+  margin: 5px;
+}
+
+.fact {
+  display:none;
+}
+
+.fact.visible {
+  display: block;
 }
